# SGAS

./: README.md
Raspberry/: client.py  database_orm  database_orm.py  generate_gRPC.txt  main.py  sensor_rw  sensor_rw.py  server.proto  server_pb2.py  server_pb2_grpc.py  setup_raspberrypi.txt
Raspberry/gRPC/: server.py  server_pb2.py
Sql/: create_tables.sql
Website/: .env  .gitignore  Cargo.toml  build.rs
Website/migrations/: 20240502203440_user.down.sql  20240502203440_user.up.sql  20240605081555_Initial.down.sql  20240605081555_Initial.up.sql  20240606135718_Graphs.down.sql  20240606135718_Graphs.up.sql
Website/proto/: server.proto
Website/src/: auth.rs  components.rs  domain.rs  fileserv.rs  grpc.rs  lib.rs  main.rs  pages.rs  shared.rs
Website/src/components/: add_sensor.rs  create_favorite.rs  edit_favorite.rs  favorite.rs  graphs.rs  header.rs  login.rs  not_logged_in_home.rs  page_link.rs  paginator.rs  sensor_table.rs  signup.rs
Website/src/db/: database.rs  repositories.rs
Website/src/db/repositories/: base.rs  favorite.rs  graph.rs  sensor.rs  user.rs
Website/src/domain/: favorite.rs  graph.rs  sensor.rs
Website/src/pages/: database.rs  home.rs  login.rs  main.rs  signup.rs
Website/src/shared/: app_state.rs  graph_types.rs  repositories.rs  user.rs
Website/style/: main.scss
gRPC/: client.py  generate_gRPC.txt  server.proto  server.py  server_pb2.py  server_pb2_grpc.py
